--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,4 +23,32 @@ jobs:
     - name: Build with Maven
       run: mvn compile
 
+  security-checks:
+    runs-on: self-hosted
+    # Run job after compile is completed
+    needs: compile
+    steps:
+    - uses: actions/checkout@v4
+
+    # Trivy Scan
+    - name: Trivy Installation
+      run: |
+        sudo apt-get install wget apt-transport-https gnupg lsb-release
+        wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+        echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+        sudo apt-get update -y
+        sudo apt-get install trivy -y
+
+    - name: Trivy filesystem scan
+      run: trivy fs --format table -o fs-report.json .
+
+    # Gitleaks Scan
+    - name: Gitleaks Installation
+      run: sudo apt install gitleaks -y
+
+    - name: Gitleaks code scan
+      run: gitleaks detect source . -r gitleaks-report.json -f json
+    
+      
+
    
