--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -153,7 +153,8 @@ jobs:
       with:
         context: .
         push: true
-        tags: devopsdee/GC-Bank:latest
+        tags: devopsdee/gc-bank:latest
+        file: ./Dockerfile
    
 
 
